--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-portfolio-website",
   "version": "0.1.0",
+  "homepage": "https://Vikas94Patel.github.io/vikas-react-portfolio",
   "private": true,
-  "homepage": "http://vikaspatel.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
